Closed Bug 1771259 Opened 3 years ago Closed 3 years ago

[CTW] CharBounds crashes when called on the insertion point at the end of a text box

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox101 --- unaffected
firefox102 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

Details

(Keywords: crash, Whiteboard: [ctw-m2])

Crash Data

Attachments

(1 file)

HyperTextAccessibleBase::CharBounds crashes if it is called with an offset which is 1 past the last character; i.e. the text length. Because of the insertion point at the end of a text box, it is valid for a client to call CharBounds like this. We should just return an empty rect.

Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1e0fa73ae80e Fix crash when calling TextLeafPoint::CharBounds on the insertion point at the end of a text box. r=morgan
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: