Bug 1771259: Fix crash when calling TextLeafPoint::CharBounds on the insertion point at the end of a text box. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D147397